--- a/Backend/Backend/appsettings.json
+++ b/Backend/Backend/appsettings.json
@@ -8,7 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "",
-    "RabbitMQ": "amqp://admin1:123456@localhost:5672/"
+    "RabbitMQ": "amqp://admin1:123456@localhost:5672/",
+    "Redis": "localhost:6379, defaultDatabase=0"
   }
 
 }
