--- a/Frontend/.dockerignore
+++ b/Frontend/.dockerignore
@@ -1,27 +1,27 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # Compiled output
-**/dist
-**/tmp
-**/out-tsc
-**/bazel-out
+/dist
+/tmp
+/out-tsc
+/bazel-out
 
 # Node
-**/node_modules
-**/npm-debug.log
-**/yarn-error.log
+/node_modules
+npm-debug.log
+yarn-error.log
 
 # IDEs and editors
-**/.idea/
-**/.project
-**/.classpath
-**/.c9/
-**/*.launch
-**/.settings/
-**/*.sublime-workspace
+.idea/
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
 
 # Visual Studio Code
-**/.vscode/*
+.vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
@@ -29,17 +29,17 @@
 .history/*
 
 # Miscellaneous
-**/.angular/cache
-**/.sass-cache/
-**/connect.lock
-**/coverage
-**/libpeerconnection.log
-**/testem.log
-**/typings
+/.angular/cache
+.sass-cache/
+/connect.lock
+/coverage
+/libpeerconnection.log
+testem.log
+/typings
 
 # System files
-**/.DS_Store
-**/Thumbs.db
+.DS_Store
+Thumbs.db
 
 # Docker
 **/Dockerfile
