--- a/Images/aspnet-python-rabbitmq-redis/Dockerfile
+++ b/Images/aspnet-python-rabbitmq-redis/Dockerfile
@@ -6,6 +6,12 @@ RUN apt-get update && \
     apt-get install -y python3 python3-pip curl && \
     rm -rf /var/lib/apt/lists/*
 
+# Python 3 Virtual Environment Setup
+RUN apt-get update && apt-get install -y python3-venv && \
+    rm -rf /var/lib/apt/lists/*
+RUN python3 -m venv /opt/py3env 
+# RUN source /opt/py3env/bin/activate
+
 COPY ./install_rabbitmq.sh /install_rabbitmq.sh
 
 # Install RabbitMQ
@@ -22,4 +28,19 @@ RUN echo "[rabbitmq_management,rabbitmq_shovel,rabbitmq_shovel_management]." > /
 COPY rabbitmq.conf /etc/rabbitmq/rabbitmq.conf
 COPY definitions.json /etc/rabbitmq/definitions.json
 
-CMD ["rabbitmq-server"]
+# Install Redis
+RUN apt-get update && \
+    apt-get install -y redis-server && \
+    rm -rf /var/lib/apt/lists/*
+
+# Expose Redis port
+EXPOSE 6379
+
+# Overwrite configuration file of Redis
+COPY ./redis.conf /etc/redis/redis.conf
+
+COPY ./run.sh /run.sh
+RUN chmod +x /run.sh
+
+# Start Redis server
+CMD ["/run.sh"]
